--- a/index.html
+++ b/index.html
@@ -3,10 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>おれのサイト</title>
+  <title>二階堂幻</title>
+  <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-  <h1>おれのサイト</h1>
-  <p>つくってみた。おれのサイトです。</p>
+  <header>
+    <img src="IMG_0678 2.PNG" alt="可不の絵" width="512" height="288">
+    <h1>二階堂幻</h1>
+    <p>元気なボカロP</p>
+  </header>
+ <main>
+  <h2>WORKS</h2>
+  <section>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/6RIpNxRgx_M?si=TgXH4cZGKhFtq7TB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>AAA</iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/R7IcTZHlGLY?si=o_QdJcstMr7hbWuL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <h3>YOUTUBE</h3>
+    <p>音楽・絵・動画：二階堂幻</p>
+
+  </section>
+
+ 
+ 
+ </main>
+
+ <footer>
+  <small>(c) GenNikaido</small>
+</footer>
+
 </body>
 </html>
